ignore .vscode folder

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
     "cSpell.ignoreWords": [
         "accesories",
         "arret",
+        "bbcode",
+        "bbcode text",
         "childs",
         "creer",
         "defini",
@@ -22,6 +24,7 @@
         "posibilite",
         "preload",
         "raycast",
+        "text",
         "type"
     ]
 }
