Menus d'actions et de selections

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "arret",
         "bbcode",
         "bbcode text",
+        "categorie",
         "childs",
         "creer",
         "defini",
@@ -23,6 +24,7 @@
         "onready",
         "posibilite",
         "preload",
+        "quantite",
         "raycast",
         "text",
         "type"
